--- a/public/index.html
+++ b/public/index.html
@@ -1,132 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Комплименты</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Beautiful Style</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        .container {
+            text-align: center;
+        }
+
+        button {
+            background-color: #4caf50;
+            color: white;
+            padding: 10px 20px;
+            font-size: 16px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        p {
+            margin-top: 20px;
+            font-size: 18px;
+            color: #333;
+        }
+    </style>
 </head>
-<script type="text/javascript">
+
+<body>
+<div class="container">
+    <button onclick="showMessage()">Just touch me a little!</button>
+    <p id="message"></p>
+</div>
+
+<script>
 
     var comp = [
-        "Милая",
-        "Ласковая",
-        "Заботливая",
-        "Честная",
-        "Приветливая",
-        "Верная",
-        "Незаменимая",
-        "Сильная",
-        "Умная",
-        "Сексапильная",
-        "Умопомрачительная",
-        "Королевская",
-        "Бодрая",
-        "Всезнающая",
-        "Коварная",
-        "Модная",
-        "Няшная",
-        "Пушистая",
-        "Сексуальная",
-        "Желанная",
-        "Шикарная",
-        "Необычная",
-        "Веселая",
-        "Смешная",
-        "Гордая",
-        "Добролюбивая",
-        "Искренняя",
-        "Головокружительная",
-        "Бесподобная",
-        "Беспринципиальная",
-        "Дорогая",
-        "Значимая",
-        "Незаменимая",
-        "Миролюбивая",
-        "Чистосердечная",
-        "Непредсказуемая",
-        "Соблазнительная",
-        "Гордая",
-        "Волшебная",
-        "Божественная",
-        "Сногсшибательная",
-        "Привлекательная",
-        "Стильная",
-        "Трогательная",
-        "Классная",
-        "Правильная",
-        "Заботливая",
-        "Загадочная",
-        "Напористая",
-        "Добрая",
-        "Сборник комплиментов",
-        "Любезная",
-        "Неприступная",
-        "Удачливая",
-        "Чуткая",
-        "Чрезвычайная",
-        "Бесценная",
-        "Остроумная",
-        "Гениальная",
-        "Открытая",
-        "Грациозная",
-        "Спортивная",
-        "Вежливая",
-        "Хозяйственная",
-        "Галантная",
-        "Ловкая",
-        "Любопытная",
-        "Неприступная",
-        "Могучая",
-        "Неимоверная",
-        "Деловая",
-        "Открытая",
-        "Жгучая",
-        "Неземная",
-        "Бесценная",
-        "Видная",
-        "Ароматная",
-        "Горячая",
-        "Гламурная",
-        "Естественная",
-        "Забавная",
-        "Золотая",
-        "Звездная",
-        "Искренняя",
-        "Искрометная",
-        "Медовая",
-        "Модняшка",
-        "Неординарная",
-        "Новая",
-        "Няшная",
-        "Обаятельная",
-        "Огненная",
-        "Прилежная",
-        "Праздничная",
-        "Ритмичная",
-        "Стройная",
-        "Сумасшедшая",
-        "Терпеливая",
-        "Хозяйственная",
-        "Чудная",
-        "Экстравагантная",
+        "милая",
+        "ласковая",
+        "заботливая",
+        "честная",
+        "приветливая",
+        "верная",
+        "незаменимая",
+        "сильная",
+        "умная",
+        "сексапильная",
+        "умопомрачительная",
+        "королевская",
+        "бодрая",
+        "всезнающая",
+        "коварная",
+        "модная",
+        "няшная",
+        "пушистая",
+        "сексуальная",
+        "желанная",
+        "шикарная",
+        "необычная",
+        "веселая",
+        "смешная",
+        "гордая",
+        "добролюбивая",
+        "искренняя",
+        "головокружительная",
+        "бесподобная",
+        "беспринципиальная",
+        "дорогая",
+        "значимая",
+        "незаменимая",
+        "миролюбивая",
+        "чистосердечная",
+        "непредсказуемая",
+        "соблазнительная",
+        "гордая",
+        "волшебная",
+        "божественная",
+        "сногсшибательная",
+        "привлекательная",
+        "стильная",
+        "трогательная",
+        "классная",
+        "правильная",
+        "заботливая",
+        "загадочная",
+        "напористая",
+        "добрая",
+        "сборник комплиментов",
+        "любезная",
+        "неприступная",
+        "удачливая",
+        "чуткая",
+        "чрезвычайная",
+        "бесценная",
+        "остроумная",
+        "гениальная",
+        "открытая",
+        "грациозная",
+        "спортивная",
+        "вежливая",
+        "хозяйственная",
+        "галантная",
+        "ловкая",
+        "любопытная",
+        "неприступная",
+        "могучая",
+        "неимоверная",
+        "деловая",
+        "открытая",
+        "жгучая",
+        "неземная",
+        "бесценная",
+        "видная",
+        "ароматная",
+        "горячая",
+        "гламурная",
+        "естественная",
+        "забавная",
+        "золотая",
+        "звездная",
+        "искренняя",
+        "искрометная",
+        "медовая",
+        "модняшка",
+        "неординарная",
+        "новая",
+        "няшная",
+        "обаятельная",
+        "огненная",
+        "прилежная",
+        "праздничная",
+        "ритмичная",
+        "стройная",
+        "сумасшедшая",
+        "терпеливая",
+        "хозяйственная",
+        "чудная",
+        "экстравагантная",
     ]
 
-    function generateCompliment() {
-        const textArea = document.getElementById("textA");
-        textArea.value = "Серафима, ты сегодня " + comp[Math.floor(Math.random() * comp.length)];
+
+    function showMessage() {
+        document.getElementById("message").innerHTML = "Серафима, ты сегодня " + comp[Math.floor(Math.random() * comp.length)];;
     }
 </script>
-<body>
-<div>
-    <div>
-        <button id="generateB" style="margin-bottom: 50px; font-size: larger; font-style: italic"
-                onclick="generateCompliment()">
-            Сгенерировать
-        </button>
-    </div>
-    <div>
-        <textarea id="textA" rows="10" cols="100"></textarea>
-    </div>
-
-</div>
 </body>
+
 </html>
