--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            overflow: hidden;
             height: 100vh;
             margin: 0;
         }
@@ -21,7 +22,7 @@
         }
 
         button {
-            background-color: #4caf50;
+            background-color: #DE3163;
             color: white;
             padding: 10px 20px;
             font-size: 16px;
