--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
         }
 
         button:hover {
-            background-color: #45a049;
+            background-color: #DE3163;
         }
 
         p {
@@ -154,6 +154,7 @@
         "хозяйственная",
         "чудная",
         "экстравагантная",
+        "не присылала нюдсы"
     ]
 
 
