--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Заполнение вопросов</title>
     <style>
         body {
@@ -17,6 +18,10 @@
             text-align: center;
             width: 100%;
             max-width: 900px;
+        }
+        input, textarea {
+            touch-action: manipulation;
+            font-size: 16px;
         }
         textarea {
             width: 100%;
